# msquic

./: .gitmodules  CMakeLists.txt
.azure/: azure-pipelines.perf.yml
data/main/8ee40b1/: wan_data.json
scripts/: RemoteTests.json
src/core/: connection.c  connection.h
src/inc/: msquic.h
src/platform/: CMakeLists.txt  datapath_raw.h  datapath_raw_p2.c  datapath_raw_socket_linux.c  datapath_winuser.c
